examples/test/testpolicy19259.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19259
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key35: value35
      key39: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value48
          key8: value34
      podSelector:
        matchLabels:
          key39: value32
